<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_nav_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/AveragedApproach" />
        <item
            android:id="@+id/drawer_nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/KNNApproach" />
        <item
            android:id="@+id/drawer_nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/LongKNNApproach" />
        <item
            android:id="@+id/drawer_nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/NeuralNet" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/drawer_nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/PashBoard" />
        </menu>
    </item>

</menu>
